cmake_minimum_required(VERSION 3.0.0)
project(plot VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(3rdparty/matplotlib-cpp)
find_package(Python3 COMPONENTS Development NumPy)
add_executable(main src/main.cpp)
target_link_libraries(main  PRIVATE  Python3::Python Python3::NumPy )
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
